--- a/app/src/main/res/layout/activity_add_staff.xml
+++ b/app/src/main/res/layout/activity_add_staff.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:theme="@style/NoActionBar"
     tools:context="com.cityu.ast.towngasproject.AddStaffActivity">
 
     <ListView
+        android:id="@+id/addStaffListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/addStaffListView"/>
-</RelativeLayout>
+        android:layout_margin="5dp"/>
+</LinearLayout>
