--- a/app/src/main/res/layout/photo_list_item.xml
+++ b/app/src/main/res/layout/photo_list_item.xml
@@ -1,51 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/buttonshape">
+    android:background="@drawable/buttonshape"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="19dp"
+        android:layout_width="291dp"
+        android:layout_height="209dp"
+        android:layout_margin="@dimen/margin"
+        android:layout_weight="1"
         app:srcCompat="@mipmap/ic_launcher" />
 
-    <Button
-        android:id="@+id/btnStaffInfo"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editTxtComment"
-        android:layout_marginStart="22dp"
-        android:layout_toEndOf="@+id/photo"
-        android:background="@drawable/buttonshape"
-        android:text="輸入員工資料"
-        android:textAlignment="center" />
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/editTxtComment"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/buttonshape"
-        android:text="刪除" />
+        <EditText
+            android:id="@+id/editTxtComment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:hint="@string/editTxtComment"
+            android:inputType="text"
+            android:padding="5dp"
+            android:paddingLeft="@dimen/margin"
+            android:textSize="@dimen/normalFontSize"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/editTxtComment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/btnStaffInfo"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="19dp"
-        android:background="@drawable/buttonshape"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="備註欄" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnStaffInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/margin"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="@dimen/margin"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/buttonshape"
+            android:paddingBottom="@dimen/margin"
+            android:paddingEnd="30dp"
+            android:paddingStart="30dp"
+            android:paddingTop="@dimen/margin"
+            android:text="@string/btnStaffInfo"
+            android:textAlignment="center"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/normalFontSize"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/margin"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="@dimen/margin"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/buttonshape"
+            android:text="@string/btnDelete"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/normalFontSize"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    </LinearLayout>
