--- a/app/src/main/res/layout/photo_list_item.xml
+++ b/app/src/main/res/layout/photo_list_item.xml
@@ -14,7 +14,8 @@
         android:layout_height="209dp"
         android:layout_margin="@dimen/margin"
         android:layout_weight="1"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_gravity="center_vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +30,6 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="20dp"
-            android:layout_weight="1"
             android:hint="@string/editTxtComment"
             android:inputType="text"
             android:padding="5dp"
