--- a/app/src/main/res/layout/add_staff_custom_action_bar.xml
+++ b/app/src/main/res/layout/add_staff_custom_action_bar.xml
@@ -5,15 +5,30 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnDeleteAll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="@string/btnDeleteAll"
-            android:textSize="@dimen/normalFontSize"
-            android:textColor="#FFFFFF"
-            android:background="@color/colorPrimary"/>
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_camera"
+        android:background="@color/colorPrimary"
+        android:layout_alignBottom="@id/btnDeleteAll"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"/>
+
+    <Button
+        android:id="@+id/btnDeleteAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageButton"
+        android:layout_toRightOf="@+id/imageButton"
+        android:background="@color/colorPrimary"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
+        android:text="@string/btnDeleteAll"
+        android:textColor="#FFFFFF"
+        android:textSize="@dimen/normalFontSize" />
 
     <Button
         android:id="@+id/btnStart"
