--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#29647F</color>
     <color name="colorAccent">#121212</color>
     <color name="colorText">#121212</color>
+    <color name="white">#FFFFFF</color>
 </resources>
