--- a/app/src/main/res/layout/activity_add_staff.xml
+++ b/app/src/main/res/layout/activity_add_staff.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,12 +12,45 @@
         android:id="@+id/addStaffListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"></ListView>
+        android:layout_margin="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/linearLayout1">
 
-    <ImageButton
-        android:id="@+id/imageBtnTakePhoto"
+    </ListView>
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btnTakePhoto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin"
+            android:layout_weight="1"
+            android:background="@drawable/buttonshapedarkblue"
+            android:padding="@dimen/margin"
+            android:text="加相"
+            android:textColor="@color/white"
+            android:textSize="@dimen/normalFontSize"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin"
+            android:layout_weight="1"
+            android:background="@drawable/buttonshapeblue"
+            android:padding="@dimen/margin"
+            android:text="@string/btnStart"
+            android:textColor="@color/white"
+            android:textSize="@dimen/normalFontSize"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+</RelativeLayout>
