--- a/app/src/main/res/layout/activity_start_work.xml
+++ b/app/src/main/res/layout/activity_start_work.xml
@@ -19,6 +19,17 @@
     </ListView>
 
 
+    <ImageView
+        android:id="@+id/expanded_image"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:visibility="invisible" />
+
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
