--- a/app/src/main/res/layout/dialog_worker_select.xml
+++ b/app/src/main/res/layout/dialog_worker_select.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingTop="24dp"
-        android:paddingBottom="12dp"
+        android:paddingBottom="10dp"
         android:text="@string/workerList"
-        android:textSize="20sp"/>
+        android:textSize="24sp"
+        android:textStyle="bold"/>
     <EditText
         android:id="@+id/et1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="@string/search"/>
 
@@ -36,7 +37,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
         <Button
             android:id="@+id/cancel"
@@ -44,7 +46,7 @@
             android:layout_height="wrap_content"
             android:text="@string/cancel"
             android:layout_weight="1"
-            android:textColor="#0000FF"
+            android:textColor="@color/colorPrimaryDark"
             style="?android:attr/borderlessButtonStyle"/>
 
         <Button
@@ -53,7 +55,7 @@
             android:layout_height="wrap_content"
             android:text="@string/clear_all"
             android:layout_weight="1"
-            android:textColor="#0000FF"
+            android:textColor="@color/colorPrimaryDark"
             style="?android:attr/borderlessButtonStyle"/>
 
         <Button
@@ -62,7 +64,7 @@
             android:layout_height="wrap_content"
             android:text="@string/confirm"
             android:layout_weight="1"
-            android:textColor="#0000FF"
+            android:textColor="@color/colorPrimaryDark"
             style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
 
