--- a/app/src/main/res/layout/start_work_list_item.xml
+++ b/app/src/main/res/layout/start_work_list_item.xml
@@ -85,6 +85,15 @@
     </LinearLayout>
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="名單:"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"
+        android:textSize="@dimen/normalFontSize"
+        android:textStyle="bold"/>
+
+    <TextView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
