--- a/app/src/main/res/drawable/buttonshapedarkblue.xml
+++ b/app/src/main/res/drawable/buttonshapedarkblue.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="30dp"
+        android:radius="5dp"
         />
     <solid
-        android:color="@color/colorPrimaryDark"
+        android:color="#737F7B"
         />
     <padding
         android:left="0dp"
