--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,48 +14,47 @@
         android:layout_width="wrap_content"
         android:layout_height="257dp"
         android:layout_margin="@dimen/margin"
-        android:layout_gravity="top"
         app:srcCompat="@drawable/towngas_logo"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="137dp" />
+        android:layout_above="@+id/EditTxtLocation" />
 
     <EditText
         android:id="@+id/EditTxtLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:ems="10"
         android:hint="@string/edittext_location"
         android:inputType="text"
         android:gravity="center_vertical"
-        android:textAlignment="textStart"
-        android:textSize="@dimen/normalFontSize"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="280dp" />
+        android:layout_centerVertical="true"
+        android:textAlignment="viewStart"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:textSize="@dimen/normalFontSize" />
 
     <Button
         android:id="@+id/btnStartHome"
         android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_height="45dp"
         android:layout_marginBottom="19dp"
         android:background="@drawable/buttonshape"
+        android:layout_below="@+id/EditTxtLocation"
+        android:layout_centerHorizontal="true"
         android:text="@string/btnStart"
-        android:textColor="@color/colorText"
-        android:textSize="@dimen/normalFontSize"
+        android:textColor="@color/white"
+        android:textSize="25dp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnEnd"
         android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="52dp"
+        android:layout_below="@+id/btnStartHome"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/buttonshape"
-        android:layout_gravity="center_horizontal"
         android:text="@string/btnStop"
-        android:textColor="@color/colorText"
-        android:textSize="@dimen/normalFontSize"
+        android:textColor="@color/white"
+        android:textSize="25dp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</RelativeLayout>
 
