--- a/app/src/main/res/layout/activity_start_work.xml
+++ b/app/src/main/res/layout/activity_start_work.xml
@@ -12,9 +12,9 @@
         android:id="@+id/startWorkListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/linearLayout1">
+        android:layout_above="@+id/linearLayout1"
+        android:dividerHeight="10dp">
 
     </ListView>
 
@@ -33,7 +33,7 @@
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
@@ -41,10 +41,9 @@
             android:id="@+id/btnStartTakePhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
             android:layout_weight="1"
-            android:background="@drawable/buttonshapedarkblue"
-            android:padding="@dimen/margin"
+            android:background="@drawable/buttonshapeblue"
+            android:layout_marginRight="0.5dp"
             android:text="加相"
             android:textColor="@color/white"
             android:textSize="@dimen/normalFontSize"
@@ -54,10 +53,9 @@
             android:id="@+id/btnStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
             android:layout_weight="1"
+            android:layout_marginLeft="0.5dp"
             android:background="@drawable/buttonshapeblue"
-            android:padding="@dimen/margin"
             android:text="@string/btnStart"
             android:textColor="@color/white"
             android:textSize="@dimen/normalFontSize"
