--- a/app/src/main/res/layout/start_work_list_item.xml
+++ b/app/src/main/res/layout/start_work_list_item.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:orientation="vertical"
-    android:background="@drawable/buttonshape">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,18 +15,55 @@
 
         <ImageView
             android:id="@+id/startPhoto"
-            android:layout_width="291dp"
-            android:layout_height="209dp"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="@dimen/margin"
+            android:layout_width="343dp"
+            android:layout_height="212dp"
+            android:layout_marginRight="@dimen/margin"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="206dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnStartStaffInfo"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="@dimen/margin"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/buttonshapeblue"
+                android:paddingBottom="@dimen/margin"
+                android:paddingEnd="30dp"
+                android:paddingStart="30dp"
+                android:paddingTop="@dimen/margin"
+                android:text="@string/btnStaffInfo"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normalFontSize"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnStartDelete"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="@dimen/margin"
+                android:layout_weight="1"
+                android:background="@drawable/buttonshapedarkblue"
+                android:text="@string/btnDelete"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normalFontSize"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editTxtStartComment"
@@ -36,71 +72,41 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="20dp"
+                android:layout_weight="1"
                 android:hint="@string/editTxtComment"
                 android:inputType="text"
-                android:padding="5dp"
                 android:paddingLeft="@dimen/margin"
+                android:textColor="@color/colorText"
+                android:textColorHint="@color/colorText"
                 android:textSize="@dimen/normalFontSize"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnStartStaffInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/margin"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="@dimen/margin"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/buttonshape"
-                android:paddingBottom="@dimen/margin"
-                android:paddingEnd="30dp"
-                android:paddingStart="30dp"
-                android:paddingTop="@dimen/margin"
-                android:text="@string/btnStaffInfo"
-                android:textAlignment="center"
-                android:textColor="@color/colorText"
-                android:textSize="@dimen/normalFontSize"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/btnStartDelete"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/margin"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="@dimen/margin"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/buttonshape"
-                android:text="@string/btnDelete"
-                android:textColor="@color/colorText"
-                android:textSize="@dimen/normalFontSize"
-                android:textStyle="bold" />
 
         </LinearLayout>
 
     </LinearLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="名單:"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="left"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_weight="1"
+        android:text="名單"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
         android:textSize="@dimen/normalFontSize"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorText"/>
+        android:layout_weight="1"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="20sp" />
 
 </LinearLayout>
