--- a/app/src/main/res/layout/activity_start_work.xml
+++ b/app/src/main/res/layout/activity_start_work.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:theme="@style/NoActionBar"
+    android:background="#B7BCC2"
     tools:context="com.cityu.ast.towngasproject.StartWorkActivity">
 
     <ListView
@@ -14,7 +15,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/linearLayout1"
-        android:dividerHeight="10dp">
+        android:listSelector="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
+        android:divider="@null"
+        android:dividerHeight="1dp">
 
     </ListView>
 
@@ -33,17 +37,16 @@
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnStartTakePhoto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/buttonshapeblue"
-            android:layout_marginRight="0.5dp"
+            android:background="@color/colorPrimary"
             android:text="加相"
             android:textColor="@color/white"
             android:textSize="@dimen/normalFontSize"
@@ -52,10 +55,9 @@
         <Button
             android:id="@+id/btnStart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginLeft="0.5dp"
-            android:background="@drawable/buttonshapeblue"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/btnStart"
             android:textColor="@color/white"
             android:textSize="@dimen/normalFontSize"
