--- a/app/src/main/res/layout/start_work_list_item.xml
+++ b/app/src/main/res/layout/start_work_list_item.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:orientation="vertical">
+    android:paddingStart="@dimen/margin"
+    android:paddingBottom="@dimen/margin"
+    android:paddingEnd="@dimen/margin">
+
+<LinearLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="20dp"
+    android:paddingEnd="15dp"
+    android:paddingTop="20dp"
+    android:background="@drawable/listview_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,17 +26,14 @@
 
         <ImageView
             android:id="@+id/startPhoto"
-            android:layout_width="343dp"
+            android:layout_width="match_parent"
             android:layout_height="212dp"
-            android:layout_marginRight="@dimen/margin"
-            android:layout_marginTop="20dp"
             android:layout_weight="1"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="206dp"
-            android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -34,16 +42,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/margin"
+                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="@dimen/margin"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
                 android:background="@drawable/buttonshapeblue"
-                android:paddingBottom="@dimen/margin"
-                android:paddingEnd="30dp"
-                android:paddingStart="30dp"
-                android:paddingTop="@dimen/margin"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
                 android:text="@string/btnStaffInfo"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -57,8 +60,6 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/margin"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="@dimen/margin"
-                android:layout_weight="1"
                 android:background="@drawable/buttonshapedarkblue"
                 android:text="@string/btnDelete"
                 android:textColor="@color/white"
@@ -70,12 +71,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:hint="@string/editTxtComment"
                 android:inputType="text"
-                android:paddingLeft="@dimen/margin"
                 android:textColor="@color/colorText"
                 android:textColorHint="@color/colorText"
                 android:textSize="@dimen/normalFontSize"
@@ -110,3 +109,4 @@
         android:textSize="20sp" />
 
 </LinearLayout>
+</FrameLayout>
