--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
         android:layout_width="150dp"
         android:layout_height="45dp"
         android:layout_marginBottom="19dp"
-        android:background="@drawable/buttonshape"
+        android:background="@drawable/buttonshapeblue"
         android:layout_below="@+id/EditTxtLocation"
         android:layout_centerHorizontal="true"
         android:text="@string/btnStart"
@@ -50,7 +50,7 @@
         android:layout_marginBottom="52dp"
         android:layout_below="@+id/btnStartHome"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/buttonshape"
+        android:background="@drawable/buttonshapeblue"
         android:text="@string/btnStop"
         android:textColor="@color/white"
         android:textSize="25dp"
