--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="5dp"
-        />
+    <!--<corners-->
+        <!--android:radius="5dp"-->
+        <!--/>-->
     <solid
-        android:color="@color/colorPrimary"
+        android:color="@color/white"
         />
 
     <margin
@@ -18,8 +18,8 @@
         android:width="270dp"
         android:height="60dp"
         />
-    <!--<stroke-->
-        <!--android:width="3dp"-->
-        <!--android:color="#878787"-->
-        <!--/>-->
+    <stroke
+        android:width="3dp"
+        android:color="@color/colorPrimary"
+        />
 </shape>
