--- a/app/src/main/res/layout/activity_start_work.xml
+++ b/app/src/main/res/layout/activity_start_work.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:theme="@style/NoActionBar"
-    android:background="#B7BCC2"
+    android:background="#D4D9E0"
     tools:context="com.cityu.ast.towngasproject.StartWorkActivity">
 
     <ListView
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="#737F7B"
             android:text="加相"
             android:textColor="@color/white"
             android:textSize="@dimen/normalFontSize"
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary"
             android:text="@string/btnStart"
             android:textColor="@color/white"
             android:textSize="@dimen/normalFontSize"
