--- a/app/src/main/res/layout/start_work_list_item.xml
+++ b/app/src/main/res/layout/start_work_list_item.xml
@@ -98,7 +98,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/list"
+        android:id="@+id/names"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
