--- a/app/src/main/res/layout/dialog_worker_select.xml
+++ b/app/src/main/res/layout/dialog_worker_select.xml
@@ -15,7 +15,7 @@
         android:textSize="24sp"
         android:textStyle="bold"/>
     <EditText
-        android:id="@+id/et1"
+        android:id="@+id/searchBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -29,7 +29,7 @@
         android:fillViewport="true"
         android:gravity="top">
         <ListView
-            android:id="@+id/lv1"
+            android:id="@+id/nameList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></ListView>
     </ScrollView>
